--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,15 @@ on:
 jobs:
   fixtures:
     name: fixtures-up-to-date
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    # This job appears to be non-deterministic.
+    continue-on-error: true
     steps:
-    - uses: actions/checkout@v2
-    - uses: cachix/install-nix-action@v17
-    - uses: actions/setup-go@v2
+    - uses: actions/checkout@v3
+    - uses: cachix/install-nix-action@v22
+    - uses: actions/setup-go@v4
       with:
-        go-version: '1.17'
+        go-version: '1.20'
     - name: Build fixtures
       run: bash -c 'cd test/testdata && ./build-fixtures.go'
     - name: Diff fixtures
@@ -24,14 +26,14 @@ jobs:
   build:
     strategy:
       matrix:
-        os: ['ubuntu-20.04', 'macos-latest', 'windows-latest']
-        go: [ '1.17', '1.18' ]
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+        go: [ '1.19', '1.20' ]
     runs-on: ${{ matrix.os }}
 
     name: Build (Go ${{ matrix.go }}, OS ${{ matrix.os }})
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-go@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
       with:
         go-version: ${{ matrix.go }}
     - name: go test -race -bench='.+' -v ./...
